# feta

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yaml
src/feta/: cli.py  files.py
tests/: test__files.py
