# yaml-language-server: $schema=https://json.schemastore.org/pyproject.json
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "feta"
version = "0.0.1"
description = "Personal command line utilities."
authors = [{name = "billwallis"}]
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = []
scripts.feta = "feta.cli:main"

[dependency-groups]
dev = [
    "poethepoet>=0.46.0",
    "pre-commit>=4.6.0",
]
test = [
    "coverage>=7.13.5",
    "covdefaults>=2.3.0",
    "pytest>=9.0.3",
]


[tool.poe]
verbosity = -1
envfile.optional = ".env"

[tool.poe.tasks]
install.shell = """
    pip install --requirement requirements.txt --editable .
    pre-commit install --install-hooks
"""
upgrade.shell = """
    pip install --editable . --group dev --group test
    pre-commit autoupdate
"""
# TODO: Try `pip lock` -- https://pip.pypa.io/en/stable/cli/pip_lock/
lock.shell = """
    pip freeze --exclude-editable > requirements.txt
"""
test.shell = """
    coverage run -m pytest -vvv
    coverage report --no-skip-covered
    coverage xml --quiet
"""

[tool.poe.tasks.lint]
control.expr = "sys.platform"

[[tool.poe.tasks.lint.switch]]
case = "win32"
shell = """
    echo '=== pre-commit checks ==='
    SKIP=identity pre-commit run --all-files --hook-stage pre-commit
    echo '=== pre-push checks ==='
    SKIP=identity pre-commit run --all-files --hook-stage pre-push
"""

[[tool.poe.tasks.lint.switch]]
shell = """
    echo '\\033[0;34mpre-commit checks\\033[0m'
    SKIP=identity pre-commit run --all-files --hook-stage pre-commit
    echo '\\033[0;34mpre-push checks\\033[0m'
    SKIP=identity pre-commit run --all-files --hook-stage pre-push
"""


[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage]
run.plugins = ["covdefaults"]  # https://youtu.be/70T6OxKwxm0
report.fail_under = 80
report.exclude_lines = [
    "@pytest.mark.skip",
    "@pytest.mark.xfail",
]
